# seo-keyword-agents

./: .env.example  .env.production  .gitignore  CLAUDE.md  README.md  docker-compose.yml  seo-agent-prompt.md  seo-agent-prompt.txt  setup.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 936336932a85_add_users_table.py  b2a7faf0ef8c_add_role_to_users.py  d93995e76e74_add_schedules_table.py  ed3c0eec8c2d_init.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  audit.py  competitor.py  content_brief.py  keyword.py  project.py  report.py  schedule.py  user.py
backend/app/routers/: admin.py  analytics.py  audit.py  auth.py  competitor.py  content.py  keywords.py  projects.py  reports.py  schedules.py  workflows.py
backend/app/schemas/: audit.py  competitor.py  content.py  keyword.py  project.py  report.py
backend/app/services/: audit_service.py  auth_service.py  claude_client.py  competitor_service.py  content_service.py  email_service.py  export_service.py  keyword_service.py  parser.py  prompt_builder.py  scheduler_service.py  stream_manager.py  webhook_service.py
backend/app/utils/: validators.py
backend/tests/: test_api.py  test_parser.py  test_services.py  test_validators.py
docs/: examples.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  railway.toml  tailwind.config.ts
nginx/: nginx.conf
scripts/: backup.sh  init-ssl.sh  restore.sh
(+50 files in other folders)
